Fixes header too high with actions

--- a/src/assets/style/card.css.less
+++ b/src/assets/style/card.css.less
@@ -49,4 +49,6 @@
 .card-title-interactive .card-title-action {
     align-self: center;
     cursor: pointer;
+    margin-top: -4px;
+    margin-bottom: -4px;
 }
